# boilerplate-dmc-api

./: .gitignore  MANIFEST.in  README.md  setup.cfg
example/: __init__.py  db.py  schema.sql
example/api/: data.py
example/layout/: default.py
example/pages/: home.py
src/: __init__.py
src/api/: data.py
src/layout/: default.py
src/pages/: home.py
