[metadata]
name = example
version = 0.0.1
url = https://github.com/johnsmith/example
project_urls =
    Source Code = https://github.com/johnsmith/example
    Issue Tracker = https://github.com/johnsmith/example/issues
author = John Smith
author_email = info@johnsmith.com
license = BSD-3-Clause
license_file = LICENSE
description = Example repository description.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = flask, dmc, dash
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Flask
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
include_package_data = true
python_requires = >= 3.9
install_requires =
    dash
    dash-mantine-components
    dash-iconify

[options.extras_require]
test = coverage
serve = waitress
lint = black